# google-apis-rs

./: .clog.toml  .docker-build-cli.sh  .gitignore  .linux-deployment-to-downloads.sh  .osx-deploy.sh  .pre-commit-config.yaml  .rustc.version  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSE.md  Makefile  Makefile.helpers  README.md  apis.json  changelog.md  crates.js  help.html  index.html  requirements.txt  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
async_trait/: all.html  attr.async_trait.html  index.html
base64/: all.html  enum.DecodeError.html  enum.DecodeSliceError.html  enum.EncodeSliceError.html  fn.decode.html  fn.decode_engine.html  fn.decode_engine_slice.html  fn.decode_engine_vec.html  fn.decoded_len_estimate.html  fn.encode.html  fn.encode_engine.html  fn.encode_engine_slice.html  fn.encode_engine_string.html  fn.encoded_len.html  index.html
bitflags/: all.html  index.html  macro.bitflags.html
bytes/: all.html  index.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html
chrono/: all.html  constant.MAX_DATE.html  constant.MAX_DATETIME.html  constant.MIN_DATE.html  constant.MIN_DATETIME.html  enum.Month.html  enum.RoundingError.html  enum.SecondsFormat.html  enum.Weekday.html  index.html  macro.expect.html  macro.try_opt!.html  macro.try_opt.html  sidebar-items.js  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.Months.html  struct.OutOfRange.html  struct.OutOfRangeError.html  struct.ParseMonthError.html  struct.ParseWeekdayError.html  trait.Datelike.html  trait.DurationRound.html  trait.SubsecRound.html  trait.Timelike.html
core_foundation/: all.html  index.html  macro.declare_TCFType!.html  macro.declare_TCFType.html  macro.impl_CFComparison!.html  macro.impl_CFComparison.html  macro.impl_CFTypeDescription!.html  macro.impl_CFTypeDescription.html  macro.impl_TCFType!.html  macro.impl_TCFType.html  sidebar-items.js  trait.ConcreteCFType.html
core_foundation_sys/: all.html  index.html  sidebar-items.js
ct_logs/: all.html  index.html  sidebar-items.js  static.LOGS.html
darling/: all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  struct.Error.html  trait.FromAttributes.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html  type.Result.html
darling_core/: all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  trait.FromAttributes.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html
darling_macro/: all.html  derive.FromAttributes.html  derive.FromDeriveInput.html  derive.FromField.html  derive.FromMeta.html  derive.FromMetaItem.html  derive.FromTypeParam.html  derive.FromVariant.html  index.html
deranged/: all.html  index.html  struct.OptionRangedI128.html  struct.OptionRangedI16.html  struct.OptionRangedI32.html  struct.OptionRangedI64.html  struct.OptionRangedI8.html  struct.OptionRangedIsize.html  struct.OptionRangedU128.html  struct.OptionRangedU16.html  struct.OptionRangedU32.html  struct.OptionRangedU64.html  struct.OptionRangedU8.html  struct.OptionRangedUsize.html  struct.ParseIntError.html  struct.RangedI128.html  struct.RangedI16.html  struct.RangedI32.html  struct.RangedI64.html  struct.RangedI8.html  struct.RangedIsize.html  struct.RangedU128.html  struct.RangedU16.html  struct.RangedU32.html  struct.RangedU64.html  struct.RangedU8.html  struct.RangedUsize.html  struct.TryFromIntError.html
either/: all.html  enum.Either.html  index.html  macro.for_both.html  macro.try_left.html  macro.try_right.html
etc/: Makefile  json2xml.py  xml2json.py
fnv/: all.html  struct.FnvHasher.html
form_urlencoded/: all.html  fn.byte_serialize.html  fn.parse.html  index.html  struct.ByteSerialize.html  struct.Parse.html  struct.ParseIntoOwned.html  struct.Serializer.html  trait.Target.html  type.EncodingOverride.html
futures/: all.html  index.html  macro.join.html  macro.pending.html  macro.pin_mut.html  macro.poll.html  macro.ready.html  macro.select.html  macro.select_biased.html  macro.stream_select.html  macro.try_join.html
futures_channel/: all.html  index.html
futures_core/: all.html  index.html  macro.ready.html
futures_executor/: all.html  fn.block_on.html  fn.block_on_stream.html  fn.enter.html  index.html  struct.BlockingStream.html  struct.Enter.html  struct.EnterError.html  struct.LocalPool.html  struct.LocalSpawner.html
futures_io/: all.html  index.html  trait.AsyncBufRead.html  trait.AsyncRead.html  trait.AsyncSeek.html  trait.AsyncWrite.html
futures_macro/: all.html  attr.test_internal.html  index.html  macro.join_internal.html  macro.select_biased_internal.html  macro.select_internal.html  macro.stream_select_internal.html  macro.try_join_internal.html
futures_sink/: all.html  index.html  trait.Sink.html
futures_task/: all.html  fn.noop_waker.html  fn.noop_waker_ref.html  fn.waker.html  fn.waker_ref.html  index.html  sidebar-items.js  struct.FutureObj.html  struct.LocalFutureObj.html  struct.SpawnError.html  struct.WakerRef.html  trait.ArcWake.html  trait.LocalSpawn.html  trait.Spawn.html  trait.UnsafeFutureObj.html
futures_util/: all.html  index.html  macro.join.html  (+8 more)
google-api-client/: Cargo.toml
google-api-client/src/: lib.rs
google-apis-common/: CHANGELOG.md  Cargo.toml
google-apis-common/src/: auth.rs  field_mask.rs  lib.rs  serde.rs  url.rs
google-clis-common/: CHANGELOG.md  Cargo.toml
google-clis-common/src/: lib.rs
google_field_selector/: Cargo.toml
google_field_selector/src/: lib.rs
google_field_selector/tests/: tests.rs
src/rust/preproc/: Cargo.toml
src/rust/preproc/src/: main.rs
(+59548 files in other folders)
