[package]
name = "google-apis-common"
version = "6.0.4"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
repository = "https://github.com/Byron/google-apis-rs"
homepage = "https://github.com/Byron/google-apis-rs/google-apis-common"
documentation = "https://docs.rs/google-apis-common"
description = "Shared functionality among the google-api crates."
license = "MIT"
keywords = ["google", "web", "api", "common"]
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "^ 0.3"
serde = { version = "^ 1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "^ 1.0"

base64 = "0.22"
chrono = { version = "0.4.35", default-features = false, features = ["clock", "serde"] }
url = "2.0"
percent-encoding = "2.0"

yup-oauth2 = { version = "9", optional = true }
itertools = "0.13"
hyper = { version = "^ 0.14", features = ["client", "http2"] }
http = "^0.2"
tokio = { version = "^1.0", features = ["time"] }
tower-service = "^0.3.1"
