[package]
name = "google-apis-common"
version = "8.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
repository = "https://github.com/Byron/google-apis-rs"
homepage = "https://github.com/Byron/google-apis-rs/google-apis-common"
documentation = "https://docs.rs/google-apis-common"
description = "Shared functionality among the google-api crates."
license = "MIT"
keywords = ["google", "web", "api", "common"]
edition = "2021"

[lib]
doctest = false

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http2"] }
mime = "0.3"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["time"] }
url = "2"
yup-oauth2 = { version = "12", default-features = false, optional = true }

[features]
## Enable OAuth 2.0 authentication support via the `yup-oauth2` crate
yup-oauth2 = ["dep:yup-oauth2"]

## Enable Service Account support for the `yup-oauth2 crate
yup-oauth2-service-account = ["yup-oauth2", "yup-oauth2/service-account"]

## Use AWS-LC as the crypto backend
##
## Either this feature or `ring` must be enabled when enabling `yup-oauth2-service-account`
aws-lc-rs = ["yup-oauth2?/aws-lc-rs"]

## Use Ring as the crypto backend
##
## Either this feature or `aws-lc-rs` must be enabled when enabling `yup-oauth2-service-account`
ring = ["yup-oauth2?/ring"]
