# DO NOT PUBLISH
# This library is just to try out the code that should ultimately go into the code generator !
[package]
name = "google-clis-common"
version = "6.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
repository = "https://github.com/Byron/google-apis-rs"
homepage = "https://github.com/Byron/google-apis-rs/google-clis-common"
documentation = "https://docs.rs/google-clis-common"
description = "Shared functionality among the google-api CLI crates."
license = "MIT"
keywords = ["google", "web", "api", "cli", "common"]
edition = "2021"

[lib]
doctest = false

[dependencies]
mime = "^ 0.3"
yup-oauth2 = "^ 8.2"
serde = "1"
serde_json = "1"
strsim = "0.10.0"
clap = "2"
