[package]
name = "preproc"
version = "0.1.0"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2021"
publish = false

[[bin]]
name = "preproc"
path = "src/main.rs"
doctest = false
test = false

[dependencies]
pulldown-cmark-to-cmark = "10.0.0"
pulldown-cmark = "0.9.0"
url = "2.3.1"
